--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -455,9 +455,9 @@
    "source": [
     "**Answer:**\n",
     "* The decaying function used is\n",
-    "  $$ \\epsilon = e^{-0.05t} $$\n",
+    "  $$ \\epsilon = e^{-0.01t} $$\n",
     "* Around 300 trials were needed for agent to begin learning.\n",
-    "* I used the default epsilon-tolerance and alpha of 0.05. and 0.5 respectively. I used them because they were the default and they gave me best results.\n",
+    "* I used the default epsilon-tolerance and alpha of 0.05. and 0.5 respectively. I used them because they were the default and they gave me best ratings.\n",
     "* There was drastic improvement compared to default model. The safety rating and reliability rating reached the top.\n",
     "* Yes, I would say my driving agent successfully learned an appropriate policy.\n",
     "* Yes, I am really satisfied with safety and reliability ratings since they are at their best."
