--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -233,10 +233,10 @@
     "**Answer:**\n",
     "* waypoint, light are most relevant for learning both safety and efficiency.\n",
     "* Waypoint is the only feature that provide the agent the direction to move, and lights play an important role at intersections.\n",
-    "  Ongoing should also be used for safety during left turns at intersections. \n",
+    "  Ongoing should also be used for safety during left turns at intersections. Left should also be used to avoid crosstraffic while traffic from left is moving in forward direction and our cab wants to go right.\n",
     "* I am not choosing deadline, right.\n",
     "  - deadline - because it will increase the state space drastically.\n",
-    "  - right - we can avoid this as it is not providing much relevant features and avoiding it will decrease the state space"
+    "  - right - As long as vehicles are obeying traffic rules, whenever the traffic from right has a green signal to their forward or left direction, our cab will have a red light, so as long as we penalise our cab for moving forward or left while red light, traffic from right need not be considered and avoiding it will decrease the state space."
    ]
   },
   {
@@ -266,8 +266,8 @@
    "source": [
     "**Answer:**\n",
     "    \n",
-    "* The size of the state space will be 128(4x2x4x4).\n",
-    " - 4(right, left,forward,None) for waypoint \n",
+    "* The size of the state space will be 96(3x2x4x4).\n",
+    " - 3(right, left,forward) for waypoint \n",
     " - 2(red,green) for light\n",
     " - 4(right, left,forward,None) for left\n",
     " - 4(right, left,forward,None) for ongoing"
